Fix logo enlarged on mobile orientation change

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -19,8 +19,12 @@
     @media (min-width: breakpoint.$desktop) {
       width: 5.1875rem;
 
-      .logo {
-        width: 1.4375rem;
+      .logo-small {
+        display: block; /* Show the small logo */
+      }
+
+      .logo-large {
+        display: none; /* Hide the large logo */
       }
     }
   }
